Update: refactor text

--- a/002_LaTeX/Parent.tex
+++ b/002_LaTeX/Parent.tex
@@ -37,7 +37,7 @@
 \newtheorem{df}[thm]{Definicja}
 \newcommand{\E}{\mathbb{E}}
 \newcommand{\R}{\mathbb{R}}
-\newcommand{\Pra}{\mathbb{Pra}}
+\newcommand{\Pra}{\mathbb{P}}
 
 \makeatletter
 \newcommand*{\defeq}{\mathrel{\rlap{%
@@ -53,8 +53,10 @@
 \tableofcontents
 
 \input{wstep}
-\input{modelowanie_wielowymiarowych_zmiennych_losowych}
+\input{wielowymiarowe_zmienne_losowe}
+\input{modele_kopulowe}
 \input{spread_na_rynkach_finansowych}
+\input{podsumowanie}
 
 % \appendix
 % \chapter{----}
