--- a/002_LaTeX/bibliography.bib
+++ b/002_LaTeX/bibliography.bib
@@ -184,3 +184,42 @@ url="https://doi.org/10.1007/978-1-4757-2763-0_14"
 	title = {An Introduction to Multivariate Statistical Analysis},
 	year = {2003},
 }
+
+@book{Joe_Multivariate_Models,
+	author = {Joe, Harry},
+	title = {Multivariate Models and Multivariate Dependence Concepts},
+	year = {1997},
+}
+
+@article{Genest_Discrete_Copulas,
+	author = {Genest, Christian and Nešlehová, Johanna},
+	year = {2007},
+	month = {11},
+	title = {A Primer on Copulas for Count Data},
+	volume = {37},
+	journal = {Astin Bulletin},
+	doi = {10.2143/AST.37.2.2024077}
+}
+
+@article{Koopman_DiscreteCopula_HTF,
+	author = {Koopman, Siem Jan and Lit, Rutger and Lucas, Andre and Opschoor, Anne},
+	year = {2018},
+	month = {08},
+	title = {Dynamic discrete copula models for high-frequency stock price changes},
+	volume = {33},
+	journal = {Journal of Applied Econometrics},
+	doi = {10.1002/jae.2645}
+}
+
+@article{Shefzik_Weather,
+	author       = {Schefzik, R.},
+	title        = {Multivariate discrete copulas, with applications in probabilistic weather forecasting},
+	journal      = {Publications de l'Institut de Statistique de l'Université de Paris},
+	year         = {2015},
+}
+
+@book{Siddique_Stress_testing,
+	author = {Hasan, Iftekhar and Lynch, David and Siddique Akhtar},
+	title = {Stress Testing. Approaches, Methods and Applications},
+	year = {2019},
+}
