--- a/002_LaTeX/bibliography.bib
+++ b/002_LaTeX/bibliography.bib
@@ -223,3 +223,19 @@ url="https://doi.org/10.1007/978-1-4757-2763-0_14"
 	title = {Stress Testing. Approaches, Methods and Applications},
 	year = {2019},
 }
+
+@article{Scarsini1984,
+	author = {Scarsini, Marco},
+	journal = {Stochastica},
+	number = {3},
+	pages = {201-218},
+	title = {On measures of concordance.},
+	volume = {8},
+	year = {1984},
+}
+
+@book{OpRisk,
+	author = {Peters, Gareth and Shevchenko, Pavel},
+	title = {Advances in Heavy Tailed Risk Modeling: A Handbook of Operational Risk},
+	year = {2015},
+}
