--- a/002_LaTeX/wielowymiarowe_zmienne_losowe.tex
+++ b/002_LaTeX/wielowymiarowe_zmienne_losowe.tex
@@ -10,4 +10,9 @@ Problem wielowymiarowości i poprawnego jej opisu pojawia się nie tylko w finan
 \label{sec:rozklady_wielowymiarowe}
 \input{rozklady_wielowymiarowe}
 
+\section{Miary współzależności}
+\label{sec:miary_współzależności}
+\input{miary_wspolzaleznosci}
+
+
 \mgrclosechapter
