--- a/002_LaTeX/bibliography.bib
+++ b/002_LaTeX/bibliography.bib
@@ -239,3 +239,18 @@ url="https://doi.org/10.1007/978-1-4757-2763-0_14"
 	title = {Advances in Heavy Tailed Risk Modeling: A Handbook of Operational Risk},
 	year = {2015},
 }
+
+@article{BedfordCooke2002,
+	author = {Bedford, Tim and Cooke, Roger M.},
+	journal = {The Annals of Statistics},
+	publisher = {Institute of Mathematical Statistics},
+	title = {Vines: A New Graphical Model for Dependent Random Variables},
+	volume = {30},
+	year = {2002}
+}
+
+@manual{BaselII,
+	author = {BCBS},
+	title = {Revisions to the Basel II Market Risk Framework},
+	year = {2010},
+}
